--- a/ui/pages/host-storage.html.tmpl
+++ b/ui/pages/host-storage.html.tmpl
@@ -49,13 +49,13 @@ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
           <!-- Volume Group Panel -->
           <div class="panel-group firmware-ppc-enabled" id="accordion" role="tablist" aria-multiselectable="true">
               <h3>
-                  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#firmware-update-content-area" aria-expanded="false" aria-controls="firmware-update-content-area" class="">
+                  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#volume-groups-content-area" aria-expanded="false" aria-controls="volume-groups-content-area" class="">
                       <span class="accordion-icon"></span><span class="accordion-text">$_("Volume Group")</span>
                   </a>
               </h3>
-              <div id="firmware-update-content-area" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
-                  <div class='fmw-content col-md-4'>
-
+              <div id="volume-groups-content-area" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+                  <div class='fmw-content col-md-12'>
+                    <div class="row" id="volume-groups"></div>
                   </div>
               </div>
               <hr>
@@ -84,13 +84,13 @@ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
           <!-- Swap Devices Panel -->
           <div class="panel-group firmware-ppc-enabled" id="accordion" role="tablist" aria-multiselectable="true">
               <h3>
-                  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#firmware-update-content-area" aria-expanded="false" aria-controls="firmware-update-content-area" class="">
+                  <a role="button" data-toggle="collapse" data-parent="#accordion" href="#swap-devices-content-area" aria-expanded="false" aria-controls="swap-devices-content-area" class="">
                       <span class="accordion-icon"></span><span class="accordion-text">$_("Swap Devices")</span>
                   </a>
               </h3>
-              <div id="firmware-update-content-area" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
-                  <div class='fmw-content col-md-4'>
-
+              <div id="swap-devices-content-area" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
+                  <div class='fmw-content col-md-12'>
+                    <div class="row" id="swap-devices"></div>
                   </div>
               </div>
               <hr>
