--- a/ui/pages/host-storage.html.tmpl
+++ b/ui/pages/host-storage.html.tmpl
@@ -69,13 +69,13 @@ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
               </h3>
               <div id="file-systems-content-area" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingOne">
                   <div class='fmw-content col-md-12'>
-                    <div class="row">
-                        <div id="file-systems-actions" class="col-md-6">
+                    <div class="row"  style="padding-left:50px;">
+                        <div id="file-systems-actions" class="pull-left">
                         </div>
-                        <div id="file-systems-add" class="col-md-6">
+                        <div id="file-systems-add" class="pull-right">
                         </div>
                     </div>
-                    <div class="row" id="file-systems">
+                    <div class="row" id="file-systems" style="padding-left:20px;">
                     </div>
                   </div>
               </div>
@@ -152,6 +152,8 @@ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
               <hr>
           </div>
         </div>
+    </div>
+    <div id="modalWindow" class="modal fade host-modal guests-modal" tabindex="-1" role="dialog" aria-labelledby="guestsModalLabel" aria-hidden="true">
     </div>
   </div>
 <script>
