--- a/ui/pages/host-storage-format.html.tmpl
+++ b/ui/pages/host-storage-format.html.tmpl
@@ -54,32 +54,13 @@ Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301  USA
       </div>
     </div>
     <div class="modal-footer">
-      <button type="button" id="user-submit" class="btn btn-default" data-dismiss="modal" disabled>$_("Format")</button>
-      <button type="button" id="user-cancel" class="btn btn-default" data-dismiss="modal">$_("Cancel")</button>
+      <button type="button" id="storage-format" class="btn btn-default" data-dismiss="modal" >$_("Format")</button>
+      <button type="button" id="storage-cancel" class="btn btn-default" data-dismiss="modal">$_("Cancel")</button>
     </div>
-    <div id="rajat">Gupta</div>
-    </div>
-</div>
-<div id="modalWindow"></div>
+ </div>
 <script type="text/javascript">
-    // ginger.getStgdevs(function(result){
-        var opts = []
-        opts['gridId'] = "stgDevGrid"
-        opts['identifier'] = "id"
-        // alert(ginger.abc)
-        // $("#myid").val("anc");
-      //  var selectedRowData = ginger.getSelectedRowsData(opts);
-        //alert($('#ginger-storage-format-container'));
-               //$('#selectedFormatDevices').text("H");
-        // $('#myid').text("ABCD");
-// $("#myid").text("Running");
-        var mydata = JSON.stringify(ginger.getSelectedRowsData(opts));
-         console.log(mydata);
-         alert(mydata);
-         $("#rajat").html(mydata);
-         console.log($("#rajat"));
-//          $('#myid').text(ginger.getSelectedRowsData(opts));
-    // });
+         ginger.formatStorageDevice();
+
 </script>
 <!-- </body>
 </html> -->
