--- a/ui/pages/i18n.json.tmpl
+++ b/ui/pages/i18n.json.tmpl
@@ -23,5 +23,26 @@
 #silent _t = t.gettext
 {
     "Administration": "$_("Administration")",
-    "GINUM0002E": "The two passwords entered do not match."
+    "GINUM0002E": "The two passwords entered do not match.",
+
+    "GINTITLE0001M": "$_("Name")",
+    "GINTITLE0002M": "$_("Type")",
+    "GINTITLE0003M": "$_("Mount Point")",
+    "GINTITLE0004M": "$_("Size")",
+    "GINTITLE0005M": "$_("Usage")",
+    "GINTITLE0006M": "$_("Capacity")",
+    "GINTITLE0007M": "$_("WWPN")",
+    "GINTITLE0008M": "$_("WWNN")",
+    "GINTITLE0009M": "$_("State")",
+    "GINTITLE0010M": "$_("In-Use/Max Ports")",
+    "GINTITLE0011M": "$_("Speed")",
+    "GINTITLE0012M": "$_("Symbolic Name")",
+    "GINTITLE0013M": "$_("Generic")",
+    "GINTITLE0014M": "$_("Device")",
+    "GINTITLE0015M": "$_("Target")",
+    "GINTITLE0016M": "$_("Model")",
+    "GINTITLE0017M": "$_("UUID")",
+    "GINTITLE0018M": "$_("ID")",
+    "GINTITLE0019M": "$_("Multipath Count")",
+    "GINTITLE0020M": "$_("Add")"
 }
